--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Josué Zuberbühler</h1>
-      <p><span class="typed" data-typed-items="Capacidad de compromiso, Y liderazgo"></span></p>
+      <p><span class="typed" data-typed-items="Capacidad,Compromiso,Liderazgo"></span></p>
     </div>
   </section><!-- End Hero -->
 
